--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --mode production"
   },
   "keywords": [],
-  "author": "",
+  "author": "tcorley215@gmail.com",
   "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.10.5",
@@ -23,7 +23,7 @@
     "postcss-cli": "^7.1.1",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.2.1",
-    "tailwindcss": "^1.6.0",
+    "tailwindcss": "^1.8.10",
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
